<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background"
	android:orientation="vertical"
	tools:context=".ui.main.MainActivity">

	<LinearLayout
		android:id="@+id/main_market_tab_ll"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="15dp"
		android:layout_marginTop="10dp"
		android:layout_marginRight="15dp"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/main_market_tab_tv_krw"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/all_krw"
			android:textColor="@color/grey"
			android:textSize="16sp" />

		<TextView
			android:id="@+id/main_market_tab_tv_btc"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/all_btc"
			android:textColor="@color/grey"
			android:textSize="16sp" />

		<TextView
			android:id="@+id/main_market_tab_tv_eth"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/all_eth"
			android:textColor="@color/grey"
			android:textSize="16sp" />

		<TextView
			android:id="@+id/main_market_tab_tv_usdt"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/all_usdt"
			android:textColor="@color/grey"
			android:textSize="16sp" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/main_sort_tab_ll"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp"
		android:layout_marginTop="10dp"
		android:layout_marginRight="15dp"
		android:layout_marginBottom="10dp"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/main_sort_tab_tv_coin_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.8"
			android:text="@string/all_coin_name"
			android:textColor="@color/black"
			android:textSize="14sp" />

		<TextView
			android:id="@+id/main_sort_tab_tv_now_price"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/all_now_price"
			android:textColor="@color/black"
			android:textSize="14sp" />

		<TextView
			android:id="@+id/main_sort_tab_tv_compare_before"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/all_compare_before"
			android:textColor="@color/black"
			android:textSize="14sp" />

		<TextView
			android:id="@+id/main_sort_tab_tv_total_deal_price"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/all_total_deal_price"
			android:textColor="@color/black"
			android:textSize="14sp" />
	</LinearLayout>

	<androidx.viewpager.widget.ViewPager
		android:id="@+id/main_vp"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:layout_marginBottom="15dp">

	</androidx.viewpager.widget.ViewPager>

</LinearLayout>